--- a/views/cars/formFields.ejs
+++ b/views/cars/formFields.ejs
@@ -12,7 +12,7 @@
             <!-- All properties are necessary to autofill the other fields. -->
             <option value="<%= car.id%>" name="<%= car.id%>" brand="<%= car.brand%>" model="<%= car.model%>"
                 plate="<%= car.plate%>">
-                <%= car.brand%> - <%= car.model%> - <%= car.plate%>
+                <%= car.carName() %>
             </option>
             <% } %>
         </select>
@@ -48,12 +48,12 @@
 </div>
 <div class="col-lg-12">
     <div class="form-group">
-        <label for="carModel" class="required"><%= lingua.car.model%></label>
+        <label for="carModel" class=""><%= lingua.car.model%></label>
         <% if(allMakes.length == 0) { %>
         <input type="text" id="carModel" name="model" class="form-control mb-3 form-control-lg text-uppercase"
-            placeholder="Model" autofocus required />
+            placeholder="Model" autofocus />
         <% } else { %>
-        <select id="carModel" name="model" required autofocus
+        <select id="carModel" name="model" autofocus
             class="form-control mb-3 form-control-lg js-example-basic-single w-100">
             <option value=""><%= lingua.selectOne%></option>
         </select>
