--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,9 +25,8 @@
             <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
                 <h1 class="welcome-text">
                     <%# lingua.welcome%>
-                    <span class="text-black fw-bold"><%- user.personalInfo.firstName%>
-                        <%- user.personalInfo.lastName%></span>
-                    <small class="text-small text-uppercase"><%- user.role%></small>
+                    <span class="text-black fw-bold"><%= user.fullName() %></span>
+                    <small class="text-small text-uppercase"><%= user.role%></small>
                 </h1>
 
                 <% if (messages.error) { %>
@@ -170,8 +169,7 @@
                     <div class="dropdown-header text-center">
                         <!-- <img class="img-md rounded-circle" src="../../images/faces/profile/user.png" width="30px" alt="Profile image"> -->
                         <p class="mb-1 mt-3 font-weight-semibold">
-                            <%- user.personalInfo.firstName %>
-                            <%- user.personalInfo.lastName%>
+                            <%= user.fullName() %>
                         </p>
                         <p class="fw-light text-muted mb-0">
                             <%- user.role%>
