--- a/views/services/view.ejs
+++ b/views/services/view.ejs
@@ -65,11 +65,7 @@
                                                         <tr>
                                                             <td><%= lingua.car.name%></td>
                                                             <td>
-                                                                <%= lingua.car.brand%>: <%- car?.brand%>
-                                                                <br>
-                                                                <%= lingua.car.model%>: <%- car?.model%>
-                                                                <br>
-                                                                <%= lingua.car.plate%>: <%- car?.plate%>
+                                                                <%= car?.carName()%>
                                                             </td>
                                                         </tr>
                                                         <tr>
