--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -9371,7 +9371,7 @@
     --bs-gray-900: #212529;
     --bs-primary: #1856a7;
     --bs-secondary: #F1F1F1;
-    --bs-success: #34B1AA;
+    --bs-success: #008000;
     --bs-info: #52CDFF;
     --bs-warning: #ffaf00;
     --bs-danger: #F95F53;
@@ -13144,8 +13144,8 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 
 .btn-success {
     color: #000;
-    background-color: #34B1AA;
-    border-color: #34B1AA;
+    background-color: #008000;
+    border-color: #008000;
 }
 
 .btn-success:hover {
@@ -13183,8 +13183,8 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 .btn-success:disabled,
 .btn-success.disabled {
     color: #000;
-    background-color: #34B1AA;
-    border-color: #34B1AA;
+    background-color: #008000;
+    border-color: #008000;
 }
 
 .btn-info {
@@ -13516,15 +13516,15 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 
 .btn-outline-success,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .editable-submit {
-    color: #34B1AA;
-    border-color: #34B1AA;
+    color: #008000;
+    border-color: #008000;
 }
 
 .btn-outline-success:hover,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .editable-submit:hover {
     color: #000;
-    background-color: #34B1AA;
-    border-color: #34B1AA;
+    background-color: #008000;
+    border-color: #008000;
 }
 
 .btn-check:focus+.btn-outline-success,
@@ -13545,8 +13545,8 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 .btn-outline-success.dropdown-toggle.show,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .dropdown-toggle.show.editable-submit {
     color: #000;
-    background-color: #34B1AA;
-    border-color: #34B1AA;
+    background-color: #008000;
+    border-color: #008000;
 }
 
 .btn-check:checked+.btn-outline-success:focus,
@@ -13566,7 +13566,7 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .editable-submit:disabled,
 .btn-outline-success.disabled,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .disabled.editable-submit {
-    color: #34B1AA;
+    color: #008000;
     background-color: transparent;
 }
 
@@ -17229,7 +17229,7 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 }
 
 .link-success {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .link-success:hover,
@@ -17717,7 +17717,7 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
 
 .border-success,
 .swal2-modal .swal2-buttonswrapper .swal2-styled.swal2-confirm {
-    border-color: #34B1AA !important;
+    border-color: #008000 !important;
 }
 
 .border-info {
@@ -22713,11 +22713,11 @@ address p {
 }
 
 .blockquote-success {
-    border-color: #34B1AA;
+    border-color: #008000;
 }
 
 .blockquote-success .blockquote-footer {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .blockquote-info {
@@ -23997,7 +23997,7 @@ code {
 
 .accordion.accordion-solid-content .card .card-body {
     padding: 2rem;
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
     border-radius: 8px;
 }
@@ -24013,7 +24013,7 @@ code {
 }
 
 .accordion.accordion-multi-colored .card:nth-child(2) {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .accordion.accordion-multi-colored .card:nth-child(3) {
@@ -24069,8 +24069,8 @@ code {
 }
 
 .badge-outline-success {
-    color: #34B1AA;
-    border: 1px solid #34B1AA;
+    color: #008000;
+    border: 1px solid #008000;
 }
 
 .badge-outline-info {
@@ -24111,7 +24111,7 @@ code {
 
 .badge-opacity-success {
     background: #cbf0ee;
-    color: #288a84;
+    color: #198754;
 }
 
 .badge-opacity-info {
@@ -24151,8 +24151,8 @@ code {
 
 .badge-success,
 .preview-list .preview-item .preview-thumbnail .badge.badge-online {
-    color: #34B1AA;
-    border: 1px solid #34B1AA;
+    color: #008000;
+    border: 1px solid #008000;
 }
 
 .badge-info,
@@ -24205,7 +24205,7 @@ code {
 }
 
 .alert-success {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .alert-info {
@@ -24240,7 +24240,7 @@ code {
 
 .alert-fill-success {
     color: white;
-    background: #34B1AA;
+    background: #008000;
 }
 
 .alert-fill-info {
@@ -24529,7 +24529,7 @@ code {
 }
 
 .btn-success {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
 }
 
@@ -24540,7 +24540,7 @@ code {
 
 .btn-success:hover,
 .btn-success:focus {
-    background: #288a84;
+    background: #198754;
     color: #ffffff;
 }
 
@@ -24550,7 +24550,7 @@ code {
 }
 
 .btn-success.btn-social-icon-text i {
-    background: #34B1AA;
+    background: #008000;
     padding: .75rem;
     display: inline-block;
     margin-right: 1.5rem;
@@ -24564,7 +24564,7 @@ code {
 
 .btn-outline-success:hover,
 .editable-container.editable-inline .editableform .control-group .editable-buttons .editable-submit:hover {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
 }
 
@@ -25168,7 +25168,7 @@ code {
 }
 
 .btn-inverse-success:not(.btn-inverse-light) {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .btn-inverse-success.btn-inverse-secondary {
@@ -25182,7 +25182,7 @@ code {
 
 .btn-inverse-success.disabled,
 .btn-inverse-success:disabled {
-    color: #34B1AA;
+    color: #008000;
     background-color: transparent;
 }
 
@@ -25190,8 +25190,8 @@ code {
 .btn-inverse-success:active,
 .show>.btn-inverse-success.dropdown-toggle {
     color: #ffffff;
-    background-color: #34B1AA;
-    border-color: #34B1AA;
+    background-color: #008000;
+    border-color: #008000;
 }
 
 .btn-inverse-info {
@@ -25608,11 +25608,11 @@ code {
 
 .bg-inverse-success {
     background: #88dcd7;
-    border-color: #34B1AA;
+    border-color: #008000;
 }
 
 .bg-inverse-success .breadcrumb-item {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .bg-inverse-success .breadcrumb-item:before {
@@ -25632,7 +25632,7 @@ code {
 }
 
 .bg-inverse-success.breadcrumb-custom .breadcrumb-item a {
-    color: #34B1AA;
+    color: #008000;
     border: none;
 }
 
@@ -25641,7 +25641,7 @@ code {
 }
 
 .bg-inverse-success.breadcrumb-custom .breadcrumb-item span {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .bg-inverse-success.breadcrumb-custom .breadcrumb-item:last-child {
@@ -26129,7 +26129,7 @@ code {
 }
 
 .data-icon-card-success {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
 }
 
@@ -26668,7 +26668,7 @@ code {
 
 .form-check-success.form-check label input[type="checkbox"]:checked+.input-helper:before,
 .form-check-success.form-check label input[type="radio"]:checked+.input-helper:before {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .form-check-info.form-check label input[type="checkbox"]+.input-helper:before,
@@ -26895,7 +26895,7 @@ select.border-success.asColorPicker-input,
 select.border-success.typeahead,
 select.border-success.tt-query,
 select.border-success.tt-hint {
-    outline: 1px solid #34B1AA;
+    outline: 1px solid #008000;
 }
 
 select.form-control.border-success:focus,
@@ -26917,7 +26917,7 @@ select.border-success.asColorPicker-input:focus,
 select.border-success.typeahead:focus,
 select.border-success.tt-query:focus,
 select.border-success.tt-hint:focus {
-    outline: 1px solid #34B1AA;
+    outline: 1px solid #008000;
 }
 
 select.form-control.border-info,
@@ -27177,7 +27177,7 @@ select.border-dark.tt-hint:focus {
     left: 50%;
     top: 0;
     margin: 0 0 0 -.1em;
-    background: #34B1AA;
+    background: #008000;
     -webkit-transform-origin: 50% 250%;
     transform-origin: 50% 250%;
     -webkit-animation: rota 1.13s linear infinite, opa 3.67s ease-in-out infinite alternate;
@@ -27976,7 +27976,7 @@ dl li {
 
 .list-arrow li:before {
     content: '\e649';
-    color: #34B1AA;
+    color: #008000;
 }
 
 .list-star li:before {
@@ -28285,13 +28285,13 @@ dl li {
 }
 
 .pagination-success .page-item.active .page-link {
-    background: #34B1AA;
-    border-color: #34B1AA;
+    background: #008000;
+    border-color: #008000;
 }
 
 .pagination-success .page-item:hover .page-link {
     background: #3ac5bd;
-    border-color: #34B1AA;
+    border-color: #008000;
     color: #ffffff;
 }
 
@@ -28525,11 +28525,11 @@ dl li {
 }
 
 .popover-success {
-    border-color: #34B1AA;
+    border-color: #008000;
 }
 
 .popover-success .popover-header {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
     border-bottom: 0;
 }
@@ -28538,24 +28538,24 @@ dl li {
 .popover-success.bs-popover-auto[data-popper-placement^="top"] .arrow:before,
 .popover-success.bs-popover-top .arrow:after,
 .popover-success.bs-popover-auto[data-popper-placement^="top"] .arrow:after {
-    border-top-color: #34B1AA;
+    border-top-color: #008000;
 }
 
 .popover-success.bs-popover-right .arrow:before,
 .popover-success.bs-popover-right .arrow:after {
-    border-right-color: #34B1AA;
+    border-right-color: #008000;
 }
 
 .popover-success.bs-popover-bottom .arrow:before,
 .popover-success.bs-popover-auto[data-popper-placement^="bottom"] .arrow:before,
 .popover-success.bs-popover-bottom .arrow:after,
 .popover-success.bs-popover-auto[data-popper-placement^="bottom"] .arrow:after {
-    border-bottom-color: #34B1AA;
+    border-bottom-color: #008000;
 }
 
 .popover-success.bs-popover-left .arrow:before,
 .popover-success.bs-popover-left .arrow:after {
-    border-left-color: #34B1AA;
+    border-left-color: #008000;
 }
 
 .popover-info {
@@ -29224,7 +29224,7 @@ dl li {
 }
 
 .nav-pills-success .nav-link {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .nav-pills-success .nav-link.active {
@@ -29504,11 +29504,11 @@ dl li {
 }
 
 .timeline-wrapper-success .timeline-panel:before {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .timeline-wrapper-success .timeline-badge {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .timeline-wrapper-info .timeline-panel:before {
@@ -29781,26 +29781,26 @@ dl li {
 }
 
 .tooltip-success .tooltip-inner {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
 }
 
 .tooltip-success.bs-tooltip-top .arrow::before,
 .tooltip-success.bs-tooltip-auto[data-popper-placement^="top"] .arrow::before {
-    border-top-color: #34B1AA;
+    border-top-color: #008000;
 }
 
 .tooltip-success.bs-tooltip-right .arrow::before {
-    border-right-color: #34B1AA;
+    border-right-color: #008000;
 }
 
 .tooltip-success.bs-tooltip-bottom .arrow::before,
 .tooltip-success.bs-tooltip-auto[data-popper-placement^="bottom"] .arrow::before {
-    border-bottom-color: #34B1AA;
+    border-bottom-color: #008000;
 }
 
 .tooltip-success.bs-tooltip-left .arrow::before {
-    border-left-color: #34B1AA;
+    border-left-color: #008000;
 }
 
 .tooltip-info .tooltip-inner {
@@ -30084,7 +30084,7 @@ dl li {
 }
 
 .email-wrapper .mail-sidebar .menu-bar .online-status .status.online {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .email-wrapper .mail-sidebar .menu-bar .online-status .status.online:after {
@@ -31015,7 +31015,7 @@ table.dataTable tbody td.select-checkbox:after {
     content: "";
     width: 28px;
     height: 28px;
-    background: #34B1AA;
+    background: #008000;
     border-radius: 4px;
     display: block;
     margin: auto;
@@ -31420,7 +31420,7 @@ table.dataTable tbody td.select-checkbox:after {
 }
 
 .noUi-target .noUi-base .noUi-origin {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .noUi-target .noUi-base .noUi-origin .noUi-handle {
@@ -31524,19 +31524,19 @@ table.dataTable tbody td.select-checkbox:after {
 }
 
 .slider-success .noUi-base .noUi-connect {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .slider-success .noUi-base .noUi-origin {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .slider-success .noUi-base .noUi-origin .noUi-handle:after {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .slider-success .noUi-base .noUi-origin .noUi-handle .noUi-tooltip {
-    background: #34B1AA;
+    background: #008000;
     color: #ffffff;
 }
 
@@ -31900,7 +31900,7 @@ table.dataTable tbody td.select-checkbox:after {
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice:nth-child(5n+2) {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice:nth-child(5n+3) {
@@ -32193,7 +32193,7 @@ div.tagsinput span.tag a {
 }
 
 .wysi-editor a[data-wysihtml-command-value="green"] {
-    color: #34B1AA;
+    color: #008000;
 }
 
 .wysi-editor a[data-wysihtml-command-value="blue"] {
@@ -32261,7 +32261,7 @@ div.tagsinput span.tag a {
 }
 
 .wysi-editor .wysihtml-editor table td.wysiwyg-tmp-selected-cell {
-    outline: 2px solid #34B1AA;
+    outline: 2px solid #008000;
 }
 
 .wysi-editor .editor-container-tag {
@@ -34026,7 +34026,7 @@ div.tagsinput span.tag a {
 }
 
 .navbar.navbar-success .navbar-menu-wrapper {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .navbar.navbar-success:not(.navbar-light) .navbar-menu-wrapper .navbar-toggler {
@@ -35741,7 +35741,7 @@ div.tagsinput span.tag a {
 }
 
 .settings-panel .chat-list .list .profile span.online {
-    background: #34B1AA;
+    background: #008000;
 }
 
 .settings-panel .chat-list .list .profile span.offline {
