Implement google authentication.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -36027,32 +36027,106 @@ label.required:after {
 
 .colored-toast.swal2-icon-success {
     background-color: #a5dc86 !important;
-  }
-  
-  .colored-toast.swal2-icon-error {
+}
+
+.colored-toast.swal2-icon-error {
     background-color: #f27474 !important;
-  }
-  
-  .colored-toast.swal2-icon-warning {
+}
+
+.colored-toast.swal2-icon-warning {
     background-color: #f8bb86 !important;
-  }
-  
-  .colored-toast.swal2-icon-info {
+}
+
+.colored-toast.swal2-icon-info {
     background-color: #3fc3ee !important;
-  }
-  
-  .colored-toast.swal2-icon-question {
+}
+
+.colored-toast.swal2-icon-question {
     background-color: #87adbd !important;
-  }
-  
-  .colored-toast .swal2-title {
+}
+
+.colored-toast .swal2-title {
     color: white;
-  }
-  
-  .colored-toast .swal2-close {
+}
+
+.colored-toast .swal2-close {
     color: white;
-  }
-  
-  .colored-toast .swal2-html-container {
+}
+
+.colored-toast .swal2-html-container {
     color: white;
-  }
+}
+
+.login-with-google-btn {
+    transition: background-color .3s, box-shadow .3s;
+    padding: 12px 16px 12px 42px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
+    color: #757575;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    background-image: url(https://www.svgrepo.com/show/475656/google-color.svg);
+    background-color: white;
+    background-repeat: no-repeat;
+    background-size: 7%;
+    background-position: 85px 10px;
+    /* background-position: 12px 11px; */
+
+    &:hover {
+        box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 2px 4px rgba(0, 0, 0, .25);
+    }
+
+    &:active {
+        background-color: #eeeeee;
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow:
+            0 -1px 0 rgba(0, 0, 0, .04),
+            0 2px 4px rgba(0, 0, 0, .25),
+            0 0 0 3px #c8dafc;
+    }
+
+    &:disabled {
+        filter: grayscale(100%);
+        background-color: #ebebeb;
+        box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
+        cursor: not-allowed;
+    }
+}
+
+.login-or {
+    position: relative;
+    margin: 0.75rem 0;
+    text-align: center;
+}
+
+.login-or:before {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    z-index: 0;
+    border-bottom: 1px solid #dbdbdb;
+    content: ' ';
+}
+
+.login-or span {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    padding: 0 0.5rem;
+    background-color: #fff;
+}
+
+.d-flex .justify-content-between .align-items-start>.login-with-google-btn {
+    background-size: 12%;
+    background-position: 12px 11px;
+}
+
+.disabled-link {
+    pointer-events: none !important;
+}
