--- a/views/auth/selectLocation.ejs
+++ b/views/auth/selectLocation.ejs
@@ -43,7 +43,8 @@
 
                             <% for(const location of userLocations) { %>
                             <div>
-                                <a class="btn btn-outline-behance mt-3 w-50" id="<%= location.id%>" onclick="changeLocation(this, false)">
+                                <a class="btn btn-outline-behance mt-3 w-50" id="<%= location.id%>"
+                                    onclick="changeLocation(this, false)">
                                     <%= location.name %>
                                 </a>
                             </div>
