--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -53,7 +53,20 @@
                                                         <%= lingua.user.view%>
                                                         <% } %></h4>
                                                 </div>
+
                                                 <div class="d-flex justify-content-between align-items-start">
+
+                                                    <% if(isMyProfile && user.googleID) { %>
+                                                    <a href="" class="login-with-google-btn m-1 disabled-link">
+                                                        Signed in with Google
+                                                    </a>
+                                                    <% } else if(isMyProfile && !user.googleID) { %>
+                                                    <a href="/connectGoogleAccount" type="button"
+                                                        class="login-with-google-btn m-1">
+                                                        Sign in with Google
+                                                    </a>
+                                                    <% } %>
+
                                                     <a href="/changePassword/<%- customer.id%>?url=/editCustomers&userType=<%- userType%>"
                                                         type="button"
                                                         class="btn btn-primary btn-icon-text m-1 text-white">
