Bug fixes on google login.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -81,13 +81,13 @@
                                             <span>or</span>
                                         </div>
                                     </div>
-
-                                    <div>
-                                        <a href="/auth/google" type="button" class="login-with-google-btn w-100">
-                                            Sign in with Google
+                                    <div class="google-signup">
+                                        <a id="googlesetup" class="google-btn"
+                                            href="/auth/google">
+                                            <span class="google-signup-icon"></span>
+                                            <span class="google-signup-btn-text">Sign in with Google</span>
                                         </a>
                                     </div>
-
                                 </div>
                             </form>
                             <br>
