--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -36057,22 +36057,52 @@ label.required:after {
     color: white;
 }
 
-.login-with-google-btn {
-    transition: background-color .3s, box-shadow .3s;
-    padding: 12px 16px 12px 42px;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
+.login-or {
+    position: relative;
+    margin: 0.75rem 0;
+    text-align: center;
+}
+
+.login-or:before {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    z-index: 0;
+    border-bottom: 1px solid #dbdbdb;
+    content: ' ';
+}
+
+.login-or span {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    padding: 0 0.5rem;
+    background-color: #fff;
+}
+
+
+.disabled-link {
+    pointer-events: none !important;
+}
+
+.google-signup {
+    text-align: center;
+}
+
+.google-btn {
     color: #757575;
     font-size: 14px;
     font-weight: 500;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    background-image: url(https://www.svgrepo.com/show/475656/google-color.svg);
-    background-color: white;
-    background-repeat: no-repeat;
-    background-size: 7%;
-    background-position: 85px 10px;
-    /* background-position: 12px 11px; */
+    display: flex;
+    color: #666;
+    border-radius: 0.4rem;
+    border: 1px solid #e8eef4;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1);
+    white-space: nowrap;
+    background-color: var(--color-page-bg);
+    align-items: center;
 
     &:hover {
         box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 2px 4px rgba(0, 0, 0, .25);
@@ -36098,35 +36128,19 @@ label.required:after {
     }
 }
 
-.login-or {
-    position: relative;
-    margin: 0.75rem 0;
-    text-align: center;
+.google-signup-icon {
+    margin-left: auto;
+    background: url(https://www.svgrepo.com/show/475656/google-color.svg) transparent 5px 50% no-repeat;
+    background-size: 30px;
+    width: 42px;
+    height: 42px;
 }
 
-.login-or:before {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    left: 0;
-    z-index: 0;
-    border-bottom: 1px solid #dbdbdb;
-    content: ' ';
-}
-
-.login-or span {
-    position: relative;
-    z-index: 1;
-    display: inline-block;
-    padding: 0 0.5rem;
-    background-color: #fff;
-}
-
-.d-flex .justify-content-between .align-items-start>.login-with-google-btn {
-    background-size: 12%;
-    background-position: 12px 11px;
-}
-
-.disabled-link {
-    pointer-events: none !important;
+.google-signup-btn-text {
+    padding-left: 7px;
+    padding-right: 22px;
+    /* font-size: 14px;
+    font-weight: 700;
+    font-family: 'Roboto',sans-serif; */
+    margin-right: auto;
 }
