--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -49,7 +49,7 @@
                                             <h4><%= lingua.user.password.changePassword%></h4>
                                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
                                             <% if(customer) { %>
-                                            <form id="form-register" class="pt-3" action="/changePassword?url=<%- url%>"
+                                            <form id="form-register" class="pt-3" action="/changePassword?url=<%- url%>&fromProfile=<%= fromProfile%>"
                                                 method="post">
                                                 <input type="text" id="id" name="id" value="<%- customer.id%>" hidden />
                                                 <div class="row">
@@ -105,7 +105,7 @@
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
+    <!-- <script src="../../js/register.js"></script> -->
     <!-- End custom js for this page-->
 
 </body>
