Remove auth validation from /validatePlate. If the user is not loged in, then add the car to cookie-cart. Inclue Cart in registerAndSubscribe flow.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -11733,7 +11733,7 @@ progress {
 .typeahead[readonly],
 .tt-query[readonly],
 .tt-hint[readonly] {
-    background-color: #e9ecef;
+    background-color: #e9ecef !important;
     opacity: 1;
 }
 
