--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -76,36 +76,38 @@
                                             <div class="card-title">
                                                 <%= lingua.membership.createSubscriptions%>
                                             </div>
-
-                                            <div class="row">
-                                                <h5><i class="fa-solid fa-1 list-number"></i>
-                                                    <%= lingua.user.email%>
-                                                </h5>
-                                                <hr>
-                                                <div class="col-lg-12">
-                                                    <% if(!user) { %>
-                                                    <div class="form-group">
-                                                        <label class="required"
-                                                            for="email"><%= lingua.user.email%></label>
-                                                        <input type="email" id="email" name="email"
-                                                            onfocusout="validateEmail()"
-                                                            class="form-control form-control-lg"
-                                                            placeholder="example@gmail.com" required />
-
-                                                        <div id="emailValidationResult"></div>
-
-                                                    </div>
-                                                    <% } else { %>
-                                                    <input id="userID" name="userID" value="<%= user?.id%>" hidden />
-                                                    <p class="alert alert-success"><%= user.email %></p>
-                                                    <% } %>
-                                                </div>
-                                            </div>
                                             <div id="loading-div" class="text-small text-wrap">
                                             </div>
                                             <!-- Add Car Division with form fields -->
                                             <div class="d-none" id="addCar-div">
                                                 <form id="form-subscriptions" class="pt-3" method="post">
+                                                    <div class="row">
+                                                        <h5><i class="fa-solid fa-1 list-number"></i>
+                                                            <%= lingua.user.email%>
+                                                        </h5>
+                                                        <hr>
+                                                        <div class="col-lg-12">
+                                                            <% if(!user) { %>
+                                                            <div class="form-group">
+                                                                <label class="required"
+                                                                    for="email"><%= lingua.user.email%></label>
+                                                                <input type="email" id="email" name="email"
+                                                                    onfocusout="validateEmail()"
+                                                                    class="form-control form-control-lg"
+                                                                    placeholder="example@gmail.com" required />
+
+                                                                <div id="emailValidationResult"></div>
+
+                                                            </div>
+                                                            <% } else { %>
+                                                            <input id="userID" name="userID" value="<%= user?.id%>"
+                                                                hidden />
+                                                            <input id="email" name="email" value="<%= user?.email%>"
+                                                                hidden />
+                                                            <p class="alert alert-success"><%= user.email %></p>
+                                                            <% } %>
+                                                        </div>
+                                                    </div>
                                                     <div class="row">
                                                         <h5><i class="fa-solid fa-2 list-number"></i>
                                                             <%= lingua.car.select%>
@@ -146,7 +148,7 @@
                                                                 <span id="addCarLoading"></span>
                                                                 <button id="addSub"
                                                                     class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end">
-                                                                    <%= lingua.car.add%></button>
+                                                                    <%= lingua.membership.completeSubscription%></button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -159,6 +161,10 @@
                                                 </h5>
                                                 <hr>
 
+                                                <h5> <%= lingua.user.email%>
+                                                </h5>
+                                                <div id="subscriptionEmail">
+                                                </div>
                                                 <div class="table-responsive-sm">
                                                     <table id="cart-table" class="table table-hover">
                                                         <thead>
@@ -260,6 +266,7 @@
                     </div>`
             );
             initializeCart(cartString);
+            manageEmail();
             manageCheckoutBtn();
             setTimeout(function () {
                 showResult(`#loading-div`, ``);
@@ -279,6 +286,7 @@
             }
 
         }
+
         function initializeCart(cartString) {
             // Manage DB Cart
             if (cartString) {
@@ -340,7 +348,7 @@
                             let reportMessage = `<p class="alert alert-fill-danger mt-2 p-1"><i class="fa-circle-exclamation fa-solid"></i>${result.invalidMsj}</p>`;
 
                             showResult('#emailValidationResult', reportMessage);
-                            console.log(email.validity.valid);
+
                             checkoutBtn.attr("hidden", true);
 
                         } else {
@@ -350,7 +358,7 @@
                                 email.setCustomValidity("");
                                 showResult('#emailValidationResult', "");
                             }, 2500);
-                            console.log(email.validity.valid);
+
                             checkoutBtn.attr("hidden", false);
                         }
                     }).fail(function (error) {
@@ -411,7 +419,24 @@
                 checkoutBtn.removeAttr('hidden');
         };
 
+        function manageEmail() {
+            let email;
+            if (userExist) {
+                email = $('#email').val();
+            } else {
+                email = getCookie('subscriptionEmail');
+            }
+            if (email) {
+                showResult('#subscriptionEmail',
+                    `<p class="alert alert-success"> 
+                    ${email}
+                </p>`);
+            } else {
+                showResult('#subscriptionEmail',
+                    `<p class="alert alert-fill-danger mt-2 p-1">Missing Email.</p>`);
+            }
 
+        }
         // Add subscription
         $('#addSub').on('click', function (event) {
             $(this).prop('disabled', true);
@@ -432,6 +457,7 @@
                     priceID = $("#product").val(),
                     product = $("#product").find('option:selected').attr("name"),
                     price = $("#product").find('option:selected').attr("price"),
+                    subscriptionEmail = $('#email').val(),
                     // Prepare newItem Obj.
                     newItem = {
                         id: ++rowIdx,
@@ -452,7 +478,8 @@
                             plateNumber: plate,
                             newItem: newItem,
                             subscriptionList: subscriptionList ? subscriptionList : [],
-                            addToCart: true
+                            addToCart: true,
+                            subscriptionEmail
                         }), beforeSend: function () {
                             showResult(`#addCarLoading`,
                                 `<div class="spinner text-center p-1 m-1">
@@ -473,7 +500,7 @@
                                 `<p class="success"><%= lingua.car.validCar%></p>`);
 
                             addDataToTable(result.item, result.addType);
-
+                            manageEmail();
                             // Clear all elements on form for next submit.
                             clearForm(form);
                             showResult('#plateValidationResult', ``);
@@ -494,6 +521,7 @@
         });
         // Remove subscription
         $('#cart-table tbody').on('click', '.remove', function () {
+            $(this).prop('disabled', true);
             var t = $('#cart-table').DataTable();
             var triggerObj = $(this);
             var id = $(this).attr('value');
